[gd_scene load_steps=8 format=2]

[ext_resource path="res://tex/paddle.png" type="Texture" id=1]
[ext_resource path="res://Paddle.gd" type="Script" id=2]
[ext_resource path="res://tex/LargeGear.png" type="Texture" id=3]
[ext_resource path="res://tex/SmallGear.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 24.0

[sub_resource type="Animation" id=2]
resource_name = "PrepareBall"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2, 3, 3, 2, 1, 5 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_ball_ready"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Reset"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 0 ]
}

[node name="Paddle" type="KinematicBody2D"]
script = ExtResource( 2 )
ROTATION_SPEED = null

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 6
frame = 5

[node name="LargeGear" type="Sprite" parent="Sprite"]
position = Vector2( -4, -10 )
z_index = -1
texture = ExtResource( 3 )
hframes = 3

[node name="LargeGear2" type="Sprite" parent="Sprite"]
position = Vector2( -4, 10 )
z_index = -1
texture = ExtResource( 3 )
hframes = 3

[node name="SmallGear" type="Sprite" parent="Sprite"]
position = Vector2( -5, -8 )
z_index = -2
texture = ExtResource( 4 )
hframes = 3

[node name="SmallGear2" type="Sprite" parent="Sprite"]
position = Vector2( -5, 12 )
z_index = -2
texture = ExtResource( 4 )
hframes = 3

[node name="SmallGear3" type="Sprite" parent="Sprite"]
position = Vector2( 1, -19 )
z_index = -2
texture = ExtResource( 4 )
hframes = 3

[node name="SmallGear4" type="Sprite" parent="Sprite"]
position = Vector2( 1, 20 )
z_index = -2
texture = ExtResource( 4 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 5, 0 )
shape = SubResource( 1 )

[node name="BallSpawnPosition" type="Node2D" parent="."]
position = Vector2( 5, 0 )

[node name="BallFirePosition" type="Node2D" parent="."]
position = Vector2( 16, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/PrepareBall = SubResource( 2 )
anims/Reset = SubResource( 3 )
